# OTT-STREAMING-PLATFORM

./: .env.example  .gitignore  LEARN-THIS-PROJECT.md  PROJECT-EXPLANATION.md  README.md  netlify.toml
backend/: live.txt  main.py  pyproject.toml  render.yaml  requirements.txt
backend/application/: __init__.py
backend/application/services/: admin_service.py  audit_service.py  auth_service.py  content_service.py  episode_service.py  playback_service.py  review_service.py
backend/domain/: __init__.py  content.py  enums.py  exceptions.py  models.py  review.py
backend/infrastructure/: config.py
backend/infrastructure/auth/: better_auth_client.py
backend/infrastructure/cache/: redis_client.py
backend/infrastructure/content/: catalog.py  db_repository.py  seed.py  seed_phase2.py
backend/infrastructure/database/: migrations.py  models.py  session.py
backend/infrastructure/media/: storage.py
backend/infrastructure/observability/: context.py  logging.py  metrics.py  sentry.py  tracing.py
backend/infrastructure/security/: anomaly.py  bot_detection.py  moderation.py  pii.py
backend/interface/: dependencies.py  error_handlers.py  middleware.py  schemas.py
backend/interface/api/: admin.py  auth.py  content.py  health.py  router.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_content.py  test_episodes.py  test_health.py  test_pii.py  test_playback.py  test_reviews.py
frontend/: .eslintrc.json  auth-cli.config.ts  migrate_out.txt  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tc_out.txt
ops/: prometheus.yml
(+114 files in other folders)
